# vid-sys

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
lib/: vid.def  vid.lib
src/: wrapper.h
src/hyperv/: hvgdk.h  vid.h  viddefs.h
