[package]
name = "vid-sys"
version = "0.3.0"
authors = ["Mathieu Tarral <mathieu.tarral@protonmail.com>"]
edition = "2018"
links = "vid"
repository = "https://github.com/Wenzel/vid-sys"
readme = "README.md"
keywords = ["hyper-v"]
description = "Rust unsafe bindings for Vid API (Hyper-V)"
license = "GPL-3.0"

[build-dependencies]
bindgen = "0.52.0"

[features]
# Deprecated APIs
deprecated-apis = []
